Kurzhilfe.tex bearbeitet und fuer HTML-Ausgabe vorbereitet

--- a/doc/Kurzhilfe.tex
+++ b/doc/Kurzhilfe.tex
@@ -71,20 +71,21 @@
 
 \section{Einleitung}
 
+Bei \NetHackDe handelt es sich um eine von \textit{Patric Mueller} durchgeführte deutschsprachige Übersetzung. Der Stand der Übersetzung liegt zur Zeit bei etwa 90\%; der jeweils aktuelle Stand lässt sich auf der Webseite \url{http://nethack-de.sourceforge.net/} nachlesen.
+
+Fehlerberichte, Anregungen, Übersetzungsvorschläge oder Kritik können an die E-Mail-Adresse \href{mailto:bhaak@gmx.net}{bhaak@gmx.net} geschickt werden oder auch auf \url{http://sourceforge.net/projects/nethack-de} abgegeben werden.
+
+\medskip
+
 Als altehrwürdiger Vertreter des \textit{Roguelike}-Genres ist \NetHack vor allem durch drei Dinge gekennzeichnet:
 
 \begin{enumerate}
 \item \textit{Permadeath}: Der Tod der Spielfigur ist endgültig, es gibt keine Speicherstände über den Tod hinaus.
-\item Abgesehen von einigen wenigen fest vordefinierten Levels, wird der gesamte Dungeon in jedem Spiel aufs neue zufällig erzeugt, zwar nach Regeln, aber eben jedes Mal anders.
+\item Abgesehen von einigen wenigen fest vordefinierten Leveln, wird der gesamte Dungeon in jedem Spiel aufs Neue zufällig erzeugt, zwar nach Regeln, aber eben jedes Mal anders.
 \item Auch Gegenstandsbeschreibungen werden in jedem Spiel neu gemischt, so dass beispielsweise ein blauer Zaubertrank in einem Spiel Gift enthalten könnte, in einem anderen dagegen einen Heiltrank.
 \end{enumerate}
 
 Als Folge davon gleicht kein Spiel einem anderen, so dass \NetHack einen hohen Wiederspielwert aufweist. Das ist auch besser so, denn \NetHack ist schwer! Du wirst viele, viele Anläufe brauchen, ehe es dir gelingen wird, das sagenumwobene Amulett von Yendor aus der Tiefe des Dungeons ans Tageslicht zu transportieren, aber bis dahin gibt es eine Menge zu erleben.
-
-\medskip
-
-Bei \NetHackDe handelt es sich um eine von \textit{Patric Mueller} durchgeführte deutschsprachige Übersetzung, in Konkurrenz zu der bereits existierenden \textit{NetzHack}-Übersetzung. Der Stand der Übersetzung liegt zur Zeit bei etwa 90\%; der jeweils aktuelle Stand lässt sich auf der Webseite \url{http://nethack-de.sourceforge.net/} nachlesen. \\
-Fehlerberichte, Anregungen, Übersetzungsvorschläge oder Kritik können an die E-Mail-Adresse \href{mailto:bhaak@gmx.net}{bhaak@gmx.net} geschickt werden oder auch auf \url{http://sourceforge.net/projects/nethack-de} abgegeben werden.
 
 \medskip
 
@@ -123,8 +124,8 @@ Abbildung 1
 \subsection{Die Statuszeilen (unterer Bildschirmrand)}
 
 %.pg
-Die untersten zwei Zeilen versammeln, dicht gedrängt, einiges an wichtiger Information zu deiner Spielfigur.
-Im folgenden wird erklärt, was die verschiedenen Status-Einträge bedeuten:
+Die untersten zwei Zeilen zeigen wichtige Informationen zu deiner Spielfigur.
+Im Folgenden wird erklärt, was die verschiedenen Status-Einträge bedeuten:
 
 %.lp
 \blist{}
@@ -138,22 +139,22 @@ Spielfigur varieren können und das Spielgeschehen beeinflussen.
 Deine \textbf{Stärke} beeinflusst, wieviel Schaden du im Kampf austeilst und wieviel Gewicht du tragen kannst. \\
 Deine \textbf{Geschicklichkeit} beeinflusst deine Chancen, im Kampf zu treffen, Fallen auszuweichen sowie die Erfolgswahrscheinlichkeit im Umgang mit diversen Gegenständen. \\
 Deine \textbf{Konstitution} beeinflusst deine Fähigkeit, dich von Verletzungen zu erholen. \\
-Deine \textbf{Intelligenz} beeinflusst deine Erfolgsraten im Zaubern und Lernen von Zaubersprüchen. \\
+Deine \textbf{Intelligenz} beeinflusst deine Erfolgsrate im Zaubern und Lernen von Zaubersprüchen. \\
 Deine \textbf{Weisheit} beeinflusst dein Mana (magische Energie). \\
 Dein \textbf{Charisma} beeinflusst die Preise, die Ladenbesitzer von dir fordern. \\
 \medskip
 \item[\bb{Gesinnung}]
 %
-\textit{Lawful} (gesetzestreu), \textit{Neutral} oder \textit{Chaotic} (anarchistisch). Gesetzestreu wird oft mit "`gut"' und Chaotisch mit "`böse"' gleichgesetzt, aber legal und ethisch sind nicht immer das gleiche.\\
+\textit{Rechtschaffen}, \textit{Neutral} oder \textit{Chaotisch}. Rechtschaffen wird oft mit "`gut"' und Chaotisch mit "`böse"' gleichgesetzt, aber legal und ethisch sind nicht immer dasselbe.\\
 Deine Gesinnung beeinflusst, wie Monster auf dich reagieren. Monster der gleichen Gesinnung haben eine größere Wahrscheinlichkeit, dir wohlgesinnt zu sein, während für Monster der entgegengesetzten Gesinnung das umgekehrte gilt.\\
 Entsprechend deiner Gesinnung bist du Anhänger eines von drei Göttern, zu dem du in Notsituationen beten (`\key{\#pray}' oder `\key{Alt-p}') kannst.
 %.lp
-\item[\bb{Dungeon Level}]
+\item[\bb{Dungeon-Level}]
 Wie tief im Dungeon du dich befindest. Du beginnst auf Level eins und die Zahl erhöht sich, je tiefer du dich in den Dungeon begibst. Einige Level sind speziell und werden durch einen Namen anstatt einer Zahl gekennzeichnet. Das Amulett von Yendor
 soll sich irgendwo unterhalb des zwanzigsten Levels befinden.
 %.lp
 \item[\bb{Gold}]
-Die Anzahl an Goldstücken, die du offen mit dir herumträgst. In Behältern verstecktes Gold wird dabei nicht mitgezählt.
+Die Anzahl an Goldstücken, die du mit dir herumträgst. In Behältern verstecktes Gold wird dabei nicht mitgezählt.
 %.lp
 \item[\bb{Trefferpunkte}]
 Deine aktuellen und maximalen Trefferpunkte. Diese zeigen an, wieviel (zusätzlichen) Schaden du einstecken kannst, ehe du stirbst. Du kannst Trefferpunkte zurückerlangen, indem du dich ausruhst (oder zumindest eine Zeitlang nicht kämpfst) oder auch mit Hilfe einiger magischer Gegenstände oder Zaubersprüche.
@@ -189,7 +190,7 @@ aber \NetHack sicherstellen möchte, dass du sie alle in Ruhe der Reihe nach lese
 \subsection{Erklärung der Symbole: die Karte}
 
 %.pg
-Der restliche Bildschirm umfasst die Karte des Levels, soweit du es bisher erforscht hast.
+Der restliche Bildschirm umfasst die Karte des Levels, soweit du ihn bisher erforscht hast.
 Jedes Zeichen auf dem Bildschirm symbolisiert ein Lebewesen oder ein unbewegtes Objekt.
 
 \medskip
@@ -242,7 +243,7 @@ Ein geschlossene Tür. \\
 Ein Altar. \\
 Hier kannst mit `\key{d}' oder `\key{D}' Gegenstände ablegen und mit `\key{\#offer}' oder `\key{Alt-o}' Leichname opfern.
 %.lp
-\item[\tb{\^}]
+\item[\tb{\textasciicircum}]
 Eine Falle, sofern du sie bereits entdeckt hast. \\
 Du kannst versuchen, sie mit `\key{\#untrap}' oder `\key{Alt-u}' zu entschärfen.
 %.lp
@@ -300,7 +301,7 @@ Du kannst ihn mit `\key{q}' trinken.
 Ein Werkzeug oder anderer nützlicher Gegenstand, z.B. Schlüssel, Lampe, Kiste, \ldots\\
 Du kannst es bzw. ihn mit `\key{a}' benutzen.
 %.lp
-\item[\tb{"`}]
+\item[\tb{\textquotedbl}]
 Ein Amulett.\\
 Du kannst es mit `\key{P}' anlegen.
 %.lp
@@ -318,7 +319,7 @@ Du brauchst diese Symbole und ihre Bedeutungen nicht auswendig zu lernen; stattd
 %.hn 1
 \section{Die wichtigsten Befehle}
 
-In \NetHack werden Befehle über die Tastatur eingegeben, wobei im Allgemeinen ein einzelner Tastendruck einen Befehl auslöst, gelegentlich aber auch Tastenkombinationen erforderlich sind. In jedem Fall ist die Groß- und Kleinschreibung relevant, d.h. `\key{a}' und `\key{A}' sind zwei vollkommen unterschiedliche Befehle. \\
+In \NetHack werden Befehle über die Tastatur eingegeben, wobei im Allgemeinen ein einzelner Tastendruck einen Befehl auslöst, gelegentlich aber auch Tastenkombinationen erforderlich sind. In jedem Fall ist die Groß- und Kleinschreibung relevant, d.h. `\key{a}' und `\key{A}' sind zwei unterschiedliche Befehle. \\
 Aufgrund der Komplexität dieses Spiels reichen die Buchstaben allein nicht aus, so dass es noch eine Liste \textit{erweiterter Befehle} gibt, die mittels des Spezialbefehls `\key{\#}' eingegeben werden können. Die meisten davon sind allerdings alternativ auch über die \key{Alt}-Taste zu erreichen. Wenn der \textit{Ziffernblock} aktiviert ist, können einige weitere auch direkt über einen Tastendruck ausgeführt werden.
 
 Wenn du einem Befehl eine Anzahl voranstellst, wird dieser Befehl entsprechend so oft ausgeführt, z.B. kannst du mit `\key{50s}' fünfzig Züge lang suchen, wobei du unterbrochen wirst, sobald etwas Wichtiges passiert. Wenn der \textit{Ziffernblock} aktiviert ist, musst du zusätzlich ein `\key{n}' voranstellen, müsstest also stattdessen `\key{n50s}' eintippen. Befehle, für die Wiederholungen keinen Sinn ergeben, ignorieren sie einfach. Um einen eben eingegebenen Befehl zu wiederholen, kannst du `\key{Strg-A}' verwenden. Mittels der `\key{Esc}'-Taste kannst die Eingabe eines Präfix oder einer Anzahl abbrechen.
@@ -358,7 +359,7 @@ Eine Treppe oder Leiter zum nächsten tieferliegenden Level hinabsteigen.
 \newpage
 %.lp
 \item[\tb{_}]
-Reise mittels eines kürzester-Weg-Algorithmus zu einem Ort auf der Karte. Der kürzeste Weg wird über die Wege und Räume der Karte berechnet, die dem Helden bekannt sind (z.B. sichtbar oder bereits betreten). Wenn es keinen bekannten Pfad gibt, wird ein Pfad geraten. 
+Reise zu einem Ort auf der Karte. Der kürzeste Weg wird über die Wege und Räume der Karte berechnet, die dem Helden bekannt sind (z.B. sichtbar oder bereits betreten). Wenn es keinen bekannten Pfad gibt, wird versucht, ein Pfad zu raten.
 %.lp
 \item[\tb{.}]
 Ausruhen, tue einen Zug lang gar nichts. Alternativ kannst du die Zeit auch mit `\key{s}'uchen verbringen.
@@ -442,7 +443,7 @@ Zeigt dein Inventar an (alles, was du trägst).
 Zeigt dein Inventar in Form eines Menüs an, wobei neben den angezeigten Buchstaben auch die Symbole der Objektgruppen akzeptiert werden, so dass du z.B. mit `\key{I\%}' alle deine Lebensmittel oder mittels `\key{I+}' alle deine Zauberbücher auflisten kannst.
 %.lp
 \item[\tb{p}]
-Bezahle deine Einkaufsrechnung. (Englisch {\it pay}.)
+Bezahle deine Einkäufe. (Englisch {\it pay}.)
 %.lp
 \item[\tb{P}]
 Lege einen Ring oder anderes Accessoire an. (Englisch {\it put on}.)
@@ -492,22 +493,22 @@ Etwas aufheben. Ist die {\tt menustyle}-Option auf {\it full} eingestellt, kanns
 Schalte die {\tt autopickup}-Option an oder aus, d.h. ob du (bestimmte) Gegenstände automatisch aufheben willst oder nicht.
 %.lp
 \item[\tb{)}]
-Gibt an, welche Waffe du zur Zeit führst.
+Zeigt, welche Waffe du zur Zeit führst.
 %.lp
 \item[\tb{[}]
-Gibt an, welche Kleidung du zur Zeit trägst.
+Zeigt, welche Kleidung du zur Zeit trägst.
 %.lp
 \item[\tb{=}]
-Gibt an, welche Ringe du zur Zeit trägst.
+Zeigt, welche Ringe du zur Zeit trägst.
 %.lp
-\item[\tb{"`}]
-Gibt an, welches Amulett du zur Zeit trägst.
+\item[\tb{\textquotedbl}]
+Zeigt, welches Amulett du zur Zeit trägst.
 %.lp
 \item[\tb{(}]
-Gibt an, welches Werkzeug du zur Zeit in der Hand hast.
+Zeigt, welches Werkzeug du zur Zeit in der Hand hast.
 %.lp
 \item[\tb{*}]
-Gibt an, welche Ausrüstung du zur Zeit verwendest; fasst die vorhergehenden fünf typspezifischen Befehle in einem zusammen.
+Zeigt, welche Ausrüstung du zur Zeit verwendest; fasst die vorhergehenden fünf typspezifischen Befehle in einem zusammen.
 %.lp
 \item[\tb{$\backslash$}]
 Zeigt an, welche Arten von Gegenstände du bereits identifiziert hast.
@@ -536,7 +537,7 @@ Den Göttern ein Opfer darbringen.
 Reibe eine Lampe oder einen Stein.
 %.lp
 \item[\tb{\#twoweapon \textrm{oder} Alt-2}]
-Zwei-Waffen-Kampf beginnen oder beenden, wobei diejenige Waffe, die du vor deiner aktuellen Waffe zuletzt in der Hand hattest, als Zweitwaffe verwendet wird. (Siehe auch die {\tt pushweapon}-Option.) Beachte, dass nur für dieses Manöver geeignete Waffen verwendet werden können. Andernfalls gehst du automatisch wieder zum Einzelwaffenkampf über. \\
+Den Zwei-Waffen-Kampf beginnen oder beenden, wobei diejenige Waffe, die du vor deiner aktuellen Waffe zuletzt in der Hand hattest, als Zweitwaffe verwendet wird. (Siehe auch die {\tt pushweapon}-Option.) Beachte, dass nur für dieses Manöver geeignete Waffen verwendet werden können. Andernfalls gehst du automatisch wieder zum Einzelwaffenkampf über. \\
 Ist Zwei-Waffen-Kampf im `\key{\#enhance}'-Menü nicht aufgeführt, so ist die entsprechende Klasse dazu nicht in der Lage.
 %.lp
 \item[\tb{\#untrap}]
@@ -563,7 +564,7 @@ Gegen etwas treten (üblicherweise eine Tür).
 Eine Botschaft in den Boden einritzen. Die meisten Monster werden von einem 
 Handgemenge absehen, wenn man den Namen \textit{Elbereth} in den Boden ritzt 
 (allerdings wird die Schrift unleserlich, sobald du dich bewegst und 
-angreifst); dies ist oft nützlich, um einem eine Verschnaufpause zu geben.\\
+angreifst); dies ist oft nützlich, um einem eine Verschnaufpause zu verschaffen.\\
 %.sd
 %.si
 \key{E-} --- Mit den Fingern in den Staub schreiben. 
@@ -584,7 +585,7 @@ Eine Tür öffnen.
 Den Göttern ein Opfer darbringen. 
 %.lp
 \item[\tb{p}]
-Deine Einkaufsrechnung bezahlen.
+Deine Einkäufe bezahlen.
 %.lp
 \item[\tb{\#pray}]
 Die Götter um Hilfe anflehen. 
@@ -657,7 +658,7 @@ Ungewöhnliches für diesen Befehl einsetzen willst.
 \item[\tb{In welche Richtung? }]
 Für Befehle, die sich (auch) auf Nachbarfelder auswirken können, wird eine Richtung benötigt. 
 Neben einer der acht Kompassrichtungen kannst du auch `\key{.}' für dein eigenes Feld sowie 
-`\key{<}' (unter dir) bzw. `\key{>}' (über dir) angeben.
+`\key{<}' (über dir) bzw. `\key{>}' (unter dir) angeben.
 %.lp
 \item[\tb{Willst du wirklich beten? [jn] (n)}]
 Bei einigen der riskanteren Aktionen fragt \NetHack vorher nach, um die Konsequenzen von
@@ -910,7 +911,7 @@ stattdessen der Befehl `\key{t}' (werfen) ausgeführt. Der \default ist `falsch'.
 Legt den Namen einer Frucht fest. \default: `{\tt Schleimpilz}'. \\
 Dies ist eigentlich nur eine von \NetHacks nostalgischen Spielereien. 
 Wahrscheinlich sollte man dies mit dem Namen von etwas Appetitlicherem 
-überschreiben. Äpfel, Apfelsinen, Birnen, Bananen und Melonen existieren 
+überschreiben. Äpfel, Birnen, Bananen, Melonen und Orangen existieren 
 jedoch bereits in \NetHack, so dass diese nicht verwendet werden können. 
 %.lp
 \item[\ib{number\_pad}]
