Homepage update: Kurzhilfe hinzugefuegt

--- a/AUTHORS.de
+++ b/AUTHORS.de
@@ -1,5 +1,7 @@
 Patric Mueller <bhaak@gmx.net> begann die Programmierung von NetHack-De.
 
+Johanna Ploog hat viele Code- und Grammatikfehler gefunden, viele Vorschläge
+zur Übersetzung gemacht und die Kurzhilfe erstellt.
 
 Dank an ...
 ===========
