Livelog-Bugfix: zeitnahe Meldung, wenn Spieler Astral- oder Elementarebenen erreicht

--- a/CHANGES.de
+++ b/CHANGES.de
@@ -1,3 +1,7 @@
+Alpha-Release NetHack-De 3.4.3-2012XXXXa
+ - Livelog-Bugfix: zeitnahe Meldung, wenn Spieler Astral- oder
+   Elementarebenen erreicht
+
 Alpha-Release NetHack-De 3.4.3-20120127a
  - ca. 93% des generierten Textes übersetzt
    * alle Monsternamen übersetzt
