Update Jahr in Copyright-Anzeige

--- a/CHANGES.de
+++ b/CHANGES.de
@@ -1,4 +1,5 @@
-Alpha-Release NetHack-De 3.4.3-2012XXXXa
+Alpha-Release NetHack-De 3.4.3-2013XXXXa
+ - ca. 95% des generierten Textes übersetzt
  - Livelog-Bugfix: zeitnahe Meldung, wenn Spieler Astral- oder
    Elementarebenen erreicht
 
