Hitpointbar (aus UnNetHack)

--- a/CHANGES.de
+++ b/CHANGES.de
@@ -5,6 +5,7 @@ Alpha-Release NetHack-De 3.4.3-2013XXXXa
 
  - Neue Patches:
    * Menü beim 'C'-Kommando (von NAO)
+   * Hitpointbar (aus UnNetHack)
 
 Alpha-Release NetHack-De 3.4.3-20120127a
  - ca. 93% des generierten Textes übersetzt
