--- a/CHANGES.de
+++ b/CHANGES.de
@@ -6,6 +6,7 @@ Alpha-Release NetHack-De 3.4.3-2013XXXXa
  - Neue Patches:
    * Menü beim 'C'-Kommando (von NAO)
    * Hitpointbar (aus UnNetHack)
+   * Ladenpreise beim Drueberlaufen anzeigen (aus UnNetHack)
 
 Alpha-Release NetHack-De 3.4.3-20120127a
  - ca. 93% des generierten Textes übersetzt
