Webseiten-Inhalte in nanoc-Struktur ueberfuehrt

--- a/homepage/content/index.textile
+++ b/homepage/content/index.textile
@@ -1,3 +1,6 @@
+---
+title: NetHack auf Deutsch
+---
 NetHack-De ist eine deutsche Übersetzung des Spieles "NetHack":http://www.nethack.org/.
 
 Im Moment ist die Übersetzung noch in Arbeit und deshalb unvollständig.
