--- a/homepage/content/links.textile
+++ b/homepage/content/links.textile
@@ -4,8 +4,7 @@ title: Links
 h2. NetHack
 
 * "NetHack-De Sourceforge-Projektseite":http://sourceforge.net/projects/nethack-de/
-* "NetHack-De online spielen":http://slashem.de/ - <code>ssh nethack@slashem.de</code> mit dem Passwort <code>fed</code>
-* "NetHack-De-Projekt-Seite":http://www.ohloh.net/projects/nethack-de auf "Ohloh":http://www.ohloh.net/
+* "NetHack-De-Projekt-Seite":https://www.openhub.net/p/nethack-de auf "Open HUB":https://www.openhub.net/
 * "NetzHack":http://www.netzhack.de/ - der andere Versuch einer deutschen NetHack-Übersetzung
 * "NetHack":http://www.nethack.org/ - offizielle Homepage
 * "NethackWiki":http://nethackwiki.com/ - englischsprachiges Wiki für NetHack
@@ -14,6 +13,5 @@ h2. NetHack
 h2. Sonstiges
 
 * "RogueBasin":http://roguebasin.roguelikedevelopment.org/ - englischsprachiges Roguelike-Wiki
-* "The Roguelike World Map":http://www.roguetemple.com/map/ - Weltkarte von Roguelike-Spielern und -Entwicklern
 * "DoomRL":http://doom.chaosforge.org/
-* "UnNetHack":http://apps.sf.net/trac/unnethack/ - NetHack-Fork von Patric Mueller
+* "UnNetHack":https://github.com/unnethack/unnethack - NetHack-Fork von Patric Mueller
